added links to the footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     Hello world!
   </h1>
   <footer>
-    Coded by Aziza Rezaie
+    Coded by 
+    <a href="https://github.com/kabul2022">Aziza Rezaie</a> and it's, 
+    <a href="https://github.com/kabul2022/shecodes-weather-app"> on GitHub</a> and websid hosted  
+    <a href="https://weeks7-homework.netlify.app/" > on netlify</a>
   </footer>
 </body>
 </html>
