edit the footer

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </h1>
   <footer>
     Coded by 
-    <a href="https://github.com/kabul2022">Aziza Rezaie</a> and it's, 
-    <a href="https://github.com/kabul2022/shecodes-weather-app"> on GitHub</a> and websid hosted  
-    <a href="https://weeks7-homework.netlify.app/" > on netlify</a>
+    <a href="https://github.com/kabul2022"target="blank">Aziza Rezaie</a> and it's, 
+    <a href="https://github.com/kabul2022/shecodes-weather-app"target="blank"> on GitHub</a> and websidte hosted  
+    <a href="https://weeks7-homework.netlify.app/" target="blank"> on netlify</a>
   </footer>
 </body>
 </html>
