added the Html to the project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
   <title>weather app</title>
 </head>
 <body>
-  <h1>
-    Hello world!
-  </h1>
+  <header>
+<input type="search" placeholder="Enter a city.."requried />
+<input type="submit" value="search"/>
+  </header>
+  <main>
+    <div>
+      <h1>
+        paris
+      </h1>
+      <p>
+        Monday 21:26 , Cloudy
+        <br />
+        Humidity: 65% , Wind :32km/h
+      </p>
+    </div>
+    <div>🌨️12&#176C</div>
+    
+    </main>
+  </main>
+  
   <footer>
     Coded by 
     <a href="https://github.com/kabul2022"target="blank">Aziza Rezaie</a> and it's, 
