--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jersey+15+Charted&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet"href="src/style.css"/>
   <title>weather app</title>
 </head>
 <body>
+  <div class="weather-app"> 
   <header>
+    <form>
 <input type="search" placeholder="Enter a city.."requried />
 <input type="submit" value="search"/>
+</form>
   </header>
   <main>
     <div>
@@ -32,5 +41,7 @@
     <a href="https://github.com/kabul2022/shecodes-weather-app"target="blank"> on GitHub</a> and websidte hosted  
     <a href="https://weeks7-homework.netlify.app/" target="blank"> on netlify</a>
   </footer>
+  </div>
+
 </body>
 </html>
