added the basic Javascript

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="weather-app"> 
   <header>
-    <form class="search-form">
+    <form class="search-form" id="search-form">
 <input type="search" placeholder="Enter a city.."requried class="search-form-input" />
 <input type="submit" value="search"class="search-form-button"/>
 </form>
@@ -45,6 +45,7 @@
     <a href="https://github.com/kabul2022/shecodes-weather-app"target="blank"> on GitHub</a> and websidte hosted  
     <a href="https://weeks7-homework.netlify.app/" target="blank"> on netlify</a>
   </footer>
+  <script src="src/index.js"></script>
 </div>
 
 </body>
