--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <div class="weather-app"> 
   <header>
     <form class="search-form" id="search-form">
-<input type="search" placeholder="Enter a city.."requried class="search-form-input" />
+<input type="search" placeholder="Enter a city.."requried id="search-form-input"
+class="search-form-input" />
 <input type="submit" value="search"class="search-form-button"/>
 </form>
   </header>
@@ -23,7 +24,7 @@
     
     <div class="weather-app-data">
     <div>
-      <h1 class="weather-app-city"> Paris</h1>
+      <h1 class="weather-app-city" id="city"> Paris</h1>
        <p  class="weather-app-details">
         Monday 21:26 , Cloudy
         <br />
