added the search functionality  using the Api

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ class="search-form-input" />
     
     <div class="weather-app-data">
     <div>
-      <h1 class="weather-app-city" id="city"> Paris</h1>
+      <h1 class="weather-app-city" id="city"> </h1>
        <p  class="weather-app-details">
         Monday 21:26 , Cloudy
         <br />
@@ -35,7 +35,7 @@ class="search-form-input" />
     </div>
     <div class="weather-app-temperature-container">
     <div class="weather-app-icon">⛅</div>
-    <div class="weather-app-temperature">12</div>
+    <div class="weather-app-temperature" id="temperature"></div>
     <div class="weather-app-unit">&#176C</div>
   </div>
     </div>
