injected more weather data

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@ class="search-form-input" />
     <div>
       <h1 class="weather-app-city" id="city"> </h1>
        <p  class="weather-app-details">
-        Monday 21:26 , Cloudy
+       <samp id="time"></samp> 
+        <samp id="description"></samp> 
         <br />
-        Humidity:<strong>65%</strong>  , Wind :<strong>32km/h</strong>
+        Humidity:<strong id="humidity"></strong>  , Wind :<strong id="wind-speed"></strong>
         
       </p>
     </div>
