added the more  Javascript

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@ class="search-form-input" />
       </p>
     </div>
     <div class="weather-app-temperature-container">
-    <div class="weather-app-icon">⛅</div>
-    <div class="weather-app-temperature" id="temperature"></div>
-    <div class="weather-app-unit">&#176C</div>
-  </div>
+      <div class="icon">
+      <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png",
+      class="weather-app-icon" id="icon"> </div>
+      <div class="weather-app-temperature" id="temperature"></div>
+      <div class="weather-app-unit" id="unit">&#176c</div>
     </div>
   </main>
   
