added the image instead of icon emoji

--- a/index.html
+++ b/index.html
@@ -31,16 +31,11 @@ class="search-form-input" />
         <samp id="description"></samp> 
         <br />
         Humidity:<strong id="humidity"></strong>  , Wind :<strong id="wind-speed"></strong>
-        
       </p>
     </div>
     <div class="weather-app-temperature-container">
-      <div class="icon">
-        <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png",
-        class="weather-app-icon"id="icon">
-      </div>
+      <div id="icon"></div>
       <div class="weather-app-temperature" id="temperature"></div>
-      
       <div class="weather-app-unit" id="unit">&#176c</div>
     </div>
     <div class="weather-forecast" id="forecast"></div>
