--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,47 +9,48 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Jersey+15+Charted&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet"href="src/style.css"/>
+  <link rel="stylesheet" href="src/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
   <title>weather app</title>
 </head>
+
 <body>
-  <div class="weather-app"> 
-  <header>
-    <form class="search-form" id="search-form">
-<input type="search" placeholder="Enter a city.."requried id="search-form-input"
-class="search-form-input" />
-<input type="submit" value="search"class="search-form-button"/>
-</form>
-  </header>
-  <main>
-    
-    <div class="weather-app-data">
-    <div>
-      <h1 class="weather-app-city" id="city"> </h1>
-       <p  class="weather-app-details">
-       <samp id="time"></samp> 
-        <samp id="description"></samp> 
-        <br />
-        Humidity:<strong id="humidity"></strong>  , Wind :<strong id="wind-speed"></strong>
-      </p>
-    </div>
-    <div class="weather-app-temperature-container">
-      <div id="icon"></div>
-      <div class="weather-app-temperature" id="temperature"></div>
-      <div class="weather-app-unit" id="unit">&#176c</div>
-    </div>
+  <div class="weather-app">
+    <header>
+      <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter a city.." requried id="search-form-input" class="search-form-input" />
+        <input type="submit" value="search" class="search-form-button" />
+      </form>
+    </header>
+    <main>
+
+      <div class="weather-app-data">
+        <div>
+          <h1 class="weather-app-city" id="city"> </h1>
+          <p class="weather-app-details">
+            <samp id="time"></samp>
+            <samp id="description"></samp>
+            <br />
+            Humidity:<strong id="humidity"></strong> , Wind :<strong id="wind-speed"></strong>
+          </p>
+        </div>
+        <div class="weather-app-temperature-container">
+          <div id="icon"></div>
+          <div class="weather-app-temperature" id="temperature"></div>
+          <div class="weather-app-unit" id="unit">&#176c</div>
+        </div>
+    </main>
     <div class="weather-forecast" id="forecast"></div>
-  </main>
-  
-  <footer>
-    This project coded by
-    <a href="https://github.com/kabul2022"target="blank">Aziza Rezaie</a> it's, 
-    <a href="https://github.com/kabul2022/shecodes-weather-app"target="blank"> on GitHub</a> and websidte hosted  
-    <a href="https://weeks7-homework.netlify.app/" target="blank"> on netlify</a>
-  </footer>
-  <script src="src/index.js"></script>
-</div>
+
+    <footer>
+      This project coded by
+      <a href="https://github.com/kabul2022" target="blank">Aziza Rezaie</a> it's,
+      <a href="https://github.com/kabul2022/shecodes-weather-app" target="blank"> on GitHub</a> and websidte hosted
+      <a href="https://weeks7-homework.netlify.app/" target="blank"> on netlify</a>
+    </footer>
+    <script src="src/index.js"></script>
+  </div>
 
 </body>
+
 </html>
